--- a/index.html
+++ b/index.html
@@ -21,12 +21,16 @@
 				<label for="country">Country:</label>
 				<input id="country" type="search" name="country" placeholder="Enter country name" />
 				<button id="lookup">Lookup</button>
+                                <button id="cities">Lookup Cities</button>
 			</div>
 			
 			<div id="result">
 				<!-- countries will appear here -->
 			</div>
 		</main>
+                <footer>
+                    <p>Copyright &copy; 2022 Rushion Fisher.</p>
+                </footer>
 
 	</body>
 </html>
